--- a/hypnose-workshop-grundlagen.html
+++ b/hypnose-workshop-grundlagen.html
@@ -203,12 +203,18 @@
 <hr/>
 
             <h3>
-            <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kritischer Faktor</h3>
+            <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kritischen Faktor aushebeln</h3>
             <dl>
                 <dt>Synonyme</dt>
                 <dd>
                 </dd>
                 <dt>Aufgabe</dt>
+                    <ul>
+                        <li>Überladen: Qualitativ (überraschen)</li>
+                        <li>Überladen: Quantitativ</li>
+                        <li>Unterladen: Quantitativ</li>
+                        <li>Unterladen: Qualitativ?</li>
+                    </ul>
                 <dd>
                 </dd>
                 <dt>Beispiele</dt>
