--- a/hypnose-workshop-grundlagen.html
+++ b/hypnose-workshop-grundlagen.html
@@ -65,14 +65,11 @@
 
         <p>Die hier aufgeführten Grundlagen werden kombiniert angewendet. Mittels der Kombination ergibt sich eine stärkere, hypnotische Wirkung.
 
-<style>
-    .main-content dl dt {
-        font-family: serif;
-
-    }
-    .main-content dl dd {
-    }
-</style>
+            <style>
+                .main-content dl dt {
+                    font-family: serif;
+                }
+            </style>
 
             <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brückenwörter</h3>
@@ -111,17 +108,14 @@
                 <dd>
                     Themen
                 </dd>
-
                 <dt>Aufgabe</dt>
                 <dd>
                     Beschreiben wie es sich anfühl in Hypnose zu sein. Können angewendet werden um eine Hypnose wiederzubeleben.
                 </dd>
-
                 <dt>Beispiele</dt>
                 <dd>
                     entspannt, ruhig, fokussiert, warm, leer
                 </dd>
-
                 <dt>Beispiele für die Anwendung</dt>
                 <dd>
                 </dd>
@@ -159,17 +153,14 @@
                 <dd>
                     Softeners
                 </dd>
-
                 <dt>Aufgabe</dt>
                 <dd>
                     Weichmacher bieten eine Suggestion als optional an und unterlaufen den Kritschen Faktor.
                 </dd>
-
                 <dt>Beispiele</dt>
                 <dd>
                     vielleicht, womöglich, kannst, können, darfst
                 </dd>
-
                 <dt>Beispiele für die Anwendung</dt>
                 <dd>
                 </dd>
@@ -192,15 +183,66 @@
                 <dd>
                     Vater, Mutter, Baby, Freund, freundlich, einfach, wunderbar, weich
                 </dd>
-                <dd>
-                </dd>
                 <dt>Beispiele für die Anwendung</dt>
                 <dd>
                     <u>Babys</u> werden von Soldaten <u>getötet</u>.
                 </dd>
             </dl>
 
-<hr/>
+            <h3>
+            <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hypnotische Stimme</h3>
+            <dl>
+                <dt>Synonyme</dt>
+                <dd>
+                </dd>
+                <dt>Definition</dt>
+                <dd>
+                    Es gibt eine Stimme, welche sich an das Bewusstsein richtet. Und eine andere Stimme, langsamer, tiefer, dringlicher, welche sich an das Unbewusste richtet.
+
+                    <ul>
+                        <li>Rhythmus</li>
+                        <li>Pausen nach Schlüsselwörtern</li>
+                        <li>Betonung von Schlüsselwörtern durch senken der Stimme</li>
+                    </ul>
+                </dd>
+                <dt>Aufgabe</dt>
+                <dd>
+                </dd>
+                <dt>Beispiele</dt>
+                <dd>
+                </dd>
+                <dt>Beispiele für die Anwendung</dt>
+                <dd>
+                </dd>
+            </dl>
+
+            <h3>
+            <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Trancevertiefung durch Rückmeldung von Trance-Anzeichen</h3>
+            <dl>
+                <dt>Synonyme</dt>
+                <dd>
+                </dd>
+                <dt>Definition</dt>
+                <dd>
+                    Alles was auf eine Trance hinweist, wird positiv kommentiert: genau so, das ist richtig, ...
+
+                    <ul>
+                        <li>Die positive Benennung beruhigt das Bewusstsein und mindert damit den Kritischen Faktor.</li>
+                        <li>Die positive Benennung eines Trance-Anzeichens verstärkt die Trance.</li>
+                    </ul>
+                </dd>
+                <dt>Aufgabe</dt>
+                <dd>
+                </dd>
+                <dt>Beispiele</dt>
+                <dd>
+                </dd>
+                <dt>Beispiele für die Anwendung</dt>
+                <dd>
+                </dd>
+            </dl>
+
+            <hr/>
 
             <h3>
             <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kritischen Faktor aushebeln</h3>
@@ -209,13 +251,13 @@
                 <dd>
                 </dd>
                 <dt>Aufgabe</dt>
+                <dd>
                     <ul>
                         <li>Überladen: Qualitativ (überraschen)</li>
                         <li>Überladen: Quantitativ</li>
                         <li>Unterladen: Quantitativ</li>
                         <li>Unterladen: Qualitativ?</li>
                     </ul>
-                <dd>
                 </dd>
                 <dt>Beispiele</dt>
                 <dd>
@@ -255,14 +297,13 @@
                 <dd>
                 </dd>
                 <dt>Definition</dt>
-                <dd>Eine Erfahrung ist universell, wenn die allermeisten Menschen eine Vorstellung von dieser Erfahrung haben. Ob diese Erfahrung selbst gemacht oder bei anderen beobachtet wurde, ist zweitranging, da ein Beobachten bei anderen zwangsläufig in einer eigenen Erfahrung durch Spiegelung des Äußeren im Inneren endet.</dd>
+                <dd>Eine Erfahrung ist universell, wenn die allermeisten Menschen eine Vorstellung von dieser Erfahrung haben. Ob diese Erfahrung selbst gemacht oder bei anderen beobachtet wurde, ist zweitranging, da ein Beobachten bei anderen zwangsläufig
+                    in einer eigenen Erfahrung durch Spiegelung des Äußeren im Inneren endet.</dd>
                 <dt>Aufgabe</dt>
                 <dd>
                     Universelle Erfahrungen lösen eine Vorstellung und damit die beschriebenen Empfindungen aus.
                 </dd>
                 <dt>Beispiele</dt>
-                <dd>
-                </dd>
                 <dd>
                 </dd>
                 <dt>Beispiele für die Anwendung</dt>
