--- a/hypnose-workshop-grundlagen.html
+++ b/hypnose-workshop-grundlagen.html
@@ -67,7 +67,18 @@
 
             <style>
                 .main-content dl dt {
-                    font-family: serif;
+                    float:left;
+                    margin: 10px 0px 0px 0px;
+                    text-align: right;
+                    width:120px;
+                    /*font-family: serif;*/
+                }
+                .main-content dl dd {
+                    margin: 10px 0px 0px 150px;
+                    clear:right;
+                }
+                .main-content dl dd ul {
+                    display: inline-block;
                 }
             </style>
 
@@ -92,7 +103,7 @@
                     und, und dies, aber, sobald, weil, während
                 </dd>
 
-                <dt>Beispiele für die Anwendung</dt>
+                <dt>Anwendung</dt>
                 <dd>
                     Das warme Gefühl und die schöne Leere.
                 </dd>
@@ -116,17 +127,15 @@
                 <dd>
                     entspannt, ruhig, fokussiert, warm, leer
                 </dd>
-                <dt>Beispiele für die Anwendung</dt>
-                <dd>
-                </dd>
+                <dt>Anwendung</dt>
+                <dd>&nbsp;</dd>
             </dl>
 
             <h3>
             <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gleichnis</h3>
             <dl>
                 <dt>Synonyme</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
                 <dt>Definition</dt>
                 <dd>Ein Gleichnis dient Veranschaulichung eines Sachverhalts durch bildhafte Rede.</dd>
                 <dt>Aufgabe</dt>
@@ -140,7 +149,7 @@
                 <dd>
                     Weich wie Butter.
                 </dd>
-                <dt>Beispiele für die Anwendung</dt>
+                <dt>Anwendung</dt>
                 <dd>
                     Dein rechter Arm wird <u>hart wie Stahl</u>.
                 </dd>
@@ -161,9 +170,8 @@
                 <dd>
                     vielleicht, womöglich, kannst, können, darfst
                 </dd>
-                <dt>Beispiele für die Anwendung</dt>
-                <dd>
-                </dd>
+                <dt>Anwendung</dt>
+                <dd>&nbsp;</dd>
             </dl>
 
             <h3>
@@ -183,7 +191,7 @@
                 <dd>
                     Vater, Mutter, Baby, Freund, freundlich, einfach, wunderbar, weich
                 </dd>
-                <dt>Beispiele für die Anwendung</dt>
+                <dt>Anwendung</dt>
                 <dd>
                     <u>Babys</u> werden von Soldaten <u>getötet</u>.
                 </dd>
@@ -193,8 +201,7 @@
             <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hypnotische Stimme</h3>
             <dl>
                 <dt>Synonyme</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
                 <dt>Definition</dt>
                 <dd>
                     Es gibt eine Stimme, welche sich an das Bewusstsein richtet. Und eine andere Stimme, langsamer, tiefer, dringlicher, welche sich an das Unbewusste richtet.
@@ -206,22 +213,18 @@
                     </ul>
                 </dd>
                 <dt>Aufgabe</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
                 <dt>Beispiele</dt>
-                <dd>
-                </dd>
-                <dt>Beispiele für die Anwendung</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
+                <dt>Anwendung</dt>
+                <dd>&nbsp;</dd>
             </dl>
 
             <h3>
             <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Trancevertiefung durch Rückmeldung von Trance-Anzeichen</h3>
             <dl>
                 <dt>Synonyme</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
                 <dt>Definition</dt>
                 <dd>
                     Alles was auf eine Trance hinweist, wird positiv kommentiert: genau so, das ist richtig, ...
@@ -232,14 +235,11 @@
                     </ul>
                 </dd>
                 <dt>Aufgabe</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
                 <dt>Beispiele</dt>
-                <dd>
-                </dd>
-                <dt>Beispiele für die Anwendung</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
+                <dt>Anwendung</dt>
+                <dd>&nbsp;</dd>
             </dl>
 
             <hr/>
@@ -248,8 +248,7 @@
             <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kritischen Faktor aushebeln</h3>
             <dl>
                 <dt>Synonyme</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
                 <dt>Aufgabe</dt>
                 <dd>
                     <ul>
@@ -260,19 +259,16 @@
                     </ul>
                 </dd>
                 <dt>Beispiele</dt>
-                <dd>
-                </dd>
-                <dt>Beispiele für die Anwendung</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
+                <dt>Anwendung</dt>
+                <dd>&nbsp;</dd>
             </dl>
 
             <h3>
             <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hypnotische Phänomene</h3>
             <dl>
                 <dt>Synonyme</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
                 <dt>Definition</dt>
                 <dd>Hypnotische Phänomene treten ausschließlich in Verbindung mit einer Trance auf. Zu beachten ist, dass sie in verminderter Form auch im Alltag erlebt werden, da Trance auch im Alltag erlebt wird.</dd>
                 <dt>Aufgabe</dt>
@@ -283,9 +279,8 @@
                 <dd>
                     Levitation, Katalepsie, Zeitverzerrrung, Amnesie, Positive Halluzination, Negative Halluzination
                 </dd>
-                <dt>Beispiele für die Anwendung</dt>
-                <dd>
-                </dd>
+                <dt>Anwendung</dt>
+                <dd>&nbsp;</dd>
             </dl>
 
 
@@ -294,8 +289,7 @@
             <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Universelle Erfahrungen</h3>
             <dl>
                 <dt>Synonyme</dt>
-                <dd>
-                </dd>
+                <dd>&nbsp;</dd>
                 <dt>Definition</dt>
                 <dd>Eine Erfahrung ist universell, wenn die allermeisten Menschen eine Vorstellung von dieser Erfahrung haben. Ob diese Erfahrung selbst gemacht oder bei anderen beobachtet wurde, ist zweitranging, da ein Beobachten bei anderen zwangsläufig
                     in einer eigenen Erfahrung durch Spiegelung des Äußeren im Inneren endet.</dd>
@@ -304,9 +298,8 @@
                     Universelle Erfahrungen lösen eine Vorstellung und damit die beschriebenen Empfindungen aus.
                 </dd>
                 <dt>Beispiele</dt>
-                <dd>
-                </dd>
-                <dt>Beispiele für die Anwendung</dt>
+                <dd>&nbsp;</dd>
+                <dt>Anwendung</dt>
                 <dd>
                     Du kannst Dir sicherlich vorstellen, wie Du <u>an einem warmen, schönen Strand liegst</u>.
                 </dd>
